--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/preset-env": "^7.4.2",
+    "@emotion/babel-preset-css-prop": "^10.0.9",
     "babel-loader": "^8.0.5",
     "copy-webpack-plugin": "^5.0.2",
     "file-loader": "^3.0.1",
@@ -26,8 +27,12 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "@emotion/core": "^10.0.10",
+    "@emotion/styled": "^10.0.10",
     "path": "^0.12.7",
     "react": "^16.8.5",
-    "react-dom": "^16.8.5"
+    "react-dom": "^16.8.5",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0"
   }
 }
